rdsparser/rdsqueryParser.py
# Generated from rdsquery.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class rdsqueryParser ( Parser ):

    grammarFileName = "rdsquery.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'from '", "'to '", "'/'", "'...'", "'='", 
                     "'-'", "'+'", "'#'", "' '", "'>'", "'<'", "'>='", "'<='", 
                     "'!='", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "GLUE", "TIME_OFFSET", "PARTIAL_TIME", "FULL_DATE", 
                      "FULL_TIME", "LITERAL", "REAL", "INTEGER", "BOOLEAN", 
                      "ID", "WS" ]

    RULE_rdsQuery = 0
    RULE_queryExpression = 1
    RULE_designationExpr = 2
    RULE_singleDesignation = 3
    RULE_aspectPrefix = 4
    RULE_signalExpr = 5
    RULE_signalCondExpr = 6
    RULE_signalPath = 7
    RULE_gluedSignalPath = 8
    RULE_gluedSignalExpr = 9
    RULE_dateTime = 10

    ruleNames =  [ "rdsQuery", "queryExpression", "designationExpr", "singleDesignation", 
                   "aspectPrefix", "signalExpr", "signalCondExpr", "signalPath", 
                   "gluedSignalPath", "gluedSignalExpr", "dateTime" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    GLUE=16
    TIME_OFFSET=17
    PARTIAL_TIME=18
    FULL_DATE=19
    FULL_TIME=20
    LITERAL=21
    REAL=22
    INTEGER=23
    BOOLEAN=24
    ID=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RdsQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.fromdt = None # DateTimeContext
            self.todt = None # DateTimeContext

        def queryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rdsqueryParser.QueryExpressionContext)
            else:
                return self.getTypedRuleContext(rdsqueryParser.QueryExpressionContext,i)


        def dateTime(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rdsqueryParser.DateTimeContext)
            else:
                return self.getTypedRuleContext(rdsqueryParser.DateTimeContext,i)


        def getRuleIndex(self):
            return rdsqueryParser.RULE_rdsQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRdsQuery" ):
                listener.enterRdsQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRdsQuery" ):
                listener.exitRdsQuery(self)




    def rdsQuery(self):

        localctx = rdsqueryParser.RdsQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rdsQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.queryExpression()
                self.state = 25 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rdsqueryParser.T__4) | (1 << rdsqueryParser.T__5) | (1 << rdsqueryParser.T__6) | (1 << rdsqueryParser.T__7) | (1 << rdsqueryParser.GLUE))) != 0)):
                    break

            self.state = 27
            self.match(rdsqueryParser.T__0)
            self.state = 28
            localctx.fromdt = self.dateTime()

            self.state = 30
            self.match(rdsqueryParser.T__1)
            self.state = 31
            localctx.todt = self.dateTime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def designationExpr(self):
            return self.getTypedRuleContext(rdsqueryParser.DesignationExprContext,0)


        def gluedSignalExpr(self):
            return self.getTypedRuleContext(rdsqueryParser.GluedSignalExprContext,0)


        def getRuleIndex(self):
            return rdsqueryParser.RULE_queryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryExpression" ):
                listener.enterQueryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryExpression" ):
                listener.exitQueryExpression(self)




    def queryExpression(self):

        localctx = rdsqueryParser.QueryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_queryExpression)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rdsqueryParser.T__4, rdsqueryParser.T__5, rdsqueryParser.T__6, rdsqueryParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.designationExpr()
                pass
            elif token in [rdsqueryParser.GLUE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.gluedSignalExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DesignationExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.signal_expr = None # SignalExprContext

        def singleDesignation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rdsqueryParser.SingleDesignationContext)
            else:
                return self.getTypedRuleContext(rdsqueryParser.SingleDesignationContext,i)


        def signalExpr(self):
            return self.getTypedRuleContext(rdsqueryParser.SignalExprContext,0)


        def getRuleIndex(self):
            return rdsqueryParser.RULE_designationExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDesignationExpr" ):
                listener.enterDesignationExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDesignationExpr" ):
                listener.exitDesignationExpr(self)




    def designationExpr(self):

        localctx = rdsqueryParser.DesignationExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_designationExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 37
                self.singleDesignation()
                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rdsqueryParser.T__4) | (1 << rdsqueryParser.T__5) | (1 << rdsqueryParser.T__6) | (1 << rdsqueryParser.T__7))) != 0)):
                    break

            self.state = 42
            self.match(rdsqueryParser.T__2)
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 43
                localctx.signal_expr = self.signalExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleDesignationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.prefix = None # AspectPrefixContext
            self.ellipsis = None # Token
            self.identifier = None # Token
            self.glue = None # Token

        def aspectPrefix(self):
            return self.getTypedRuleContext(rdsqueryParser.AspectPrefixContext,0)


        def ID(self):
            return self.getToken(rdsqueryParser.ID, 0)

        def GLUE(self):
            return self.getToken(rdsqueryParser.GLUE, 0)

        def getRuleIndex(self):
            return rdsqueryParser.RULE_singleDesignation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleDesignation" ):
                listener.enterSingleDesignation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleDesignation" ):
                listener.exitSingleDesignation(self)




    def singleDesignation(self):

        localctx = rdsqueryParser.SingleDesignationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_singleDesignation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            localctx.prefix = self.aspectPrefix()
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==rdsqueryParser.T__3:
                self.state = 47
                localctx.ellipsis = self.match(rdsqueryParser.T__3)


            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rdsqueryParser.ID]:
                self.state = 50
                localctx.identifier = self.match(rdsqueryParser.ID)
                pass
            elif token in [rdsqueryParser.GLUE]:
                self.state = 51
                localctx.glue = self.match(rdsqueryParser.GLUE)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==rdsqueryParser.ID:
                    self.state = 52
                    localctx.identifier = self.match(rdsqueryParser.ID)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AspectPrefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rdsqueryParser.RULE_aspectPrefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAspectPrefix" ):
                listener.enterAspectPrefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAspectPrefix" ):
                listener.exitAspectPrefix(self)




    def aspectPrefix(self):

        localctx = rdsqueryParser.AspectPrefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_aspectPrefix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rdsqueryParser.T__4]:
                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 57
                    self.match(rdsqueryParser.T__4)
                    self.state = 60 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==rdsqueryParser.T__4):
                        break

                pass
            elif token in [rdsqueryParser.T__5]:
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 62
                    self.match(rdsqueryParser.T__5)
                    self.state = 65 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==rdsqueryParser.T__5):
                        break

                pass
            elif token in [rdsqueryParser.T__6]:
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 67
                    self.match(rdsqueryParser.T__6)
                    self.state = 70 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==rdsqueryParser.T__6):
                        break

                pass
            elif token in [rdsqueryParser.T__7]:
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 72
                    self.match(rdsqueryParser.T__7)
                    self.state = 75 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==rdsqueryParser.T__7):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignalExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.signal_path = None # SignalPathContext
            self.signal_cond_expr = None # SignalCondExprContext

        def signalPath(self):
            return self.getTypedRuleContext(rdsqueryParser.SignalPathContext,0)


        def signalCondExpr(self):
            return self.getTypedRuleContext(rdsqueryParser.SignalCondExprContext,0)


        def getRuleIndex(self):
            return rdsqueryParser.RULE_signalExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalExpr" ):
                listener.enterSignalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalExpr" ):
                listener.exitSignalExpr(self)




    def signalExpr(self):

        localctx = rdsqueryParser.SignalExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_signalExpr)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                localctx.signal_path = self.signalPath()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                localctx.signal_cond_expr = self.signalCondExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignalCondExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.signal_path = None # SignalPathContext
            self.op = None # Token
            self.glued_signal_path = None # GluedSignalPathContext
            self.literal = None # Token

        def signalPath(self):
            return self.getTypedRuleContext(rdsqueryParser.SignalPathContext,0)


        def gluedSignalPath(self):
            return self.getTypedRuleContext(rdsqueryParser.GluedSignalPathContext,0)


        def LITERAL(self):
            return self.getToken(rdsqueryParser.LITERAL, 0)

        def getRuleIndex(self):
            return rdsqueryParser.RULE_signalCondExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalCondExpr" ):
                listener.enterSignalCondExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalCondExpr" ):
                listener.exitSignalCondExpr(self)




    def signalCondExpr(self):

        localctx = rdsqueryParser.SignalCondExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_signalCondExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            localctx.signal_path = self.signalPath()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==rdsqueryParser.T__8:
                self.state = 84
                self.match(rdsqueryParser.T__8)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rdsqueryParser.T__4]:
                self.state = 90
                localctx.op = self.match(rdsqueryParser.T__4)
                pass
            elif token in [rdsqueryParser.T__9]:
                self.state = 91
                localctx.op = self.match(rdsqueryParser.T__9)
                pass
            elif token in [rdsqueryParser.T__10]:
                self.state = 92
                localctx.op = self.match(rdsqueryParser.T__10)
                pass
            elif token in [rdsqueryParser.T__11]:
                self.state = 93
                localctx.op = self.match(rdsqueryParser.T__11)
                pass
            elif token in [rdsqueryParser.T__12]:
                self.state = 94
                localctx.op = self.match(rdsqueryParser.T__12)
                pass
            elif token in [rdsqueryParser.T__13]:
                self.state = 95
                localctx.op = self.match(rdsqueryParser.T__13)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==rdsqueryParser.T__8:
                self.state = 98
                self.match(rdsqueryParser.T__8)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rdsqueryParser.GLUE]:
                self.state = 104
                localctx.glued_signal_path = self.gluedSignalPath()
                pass
            elif token in [rdsqueryParser.LITERAL]:
                self.state = 105
                localctx.literal = self.match(rdsqueryParser.LITERAL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignalPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.glue = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(rdsqueryParser.ID)
            else:
                return self.getToken(rdsqueryParser.ID, i)

        def GLUE(self):
            return self.getToken(rdsqueryParser.GLUE, 0)

        def getRuleIndex(self):
            return rdsqueryParser.RULE_signalPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignalPath" ):
                listener.enterSignalPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignalPath" ):
                listener.exitSignalPath(self)




    def signalPath(self):

        localctx = rdsqueryParser.SignalPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_signalPath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self.match(rdsqueryParser.ID)
                    self.state = 109
                    self.match(rdsqueryParser.T__14) 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rdsqueryParser.ID]:
                self.state = 115
                self.match(rdsqueryParser.ID)
                pass
            elif token in [rdsqueryParser.GLUE]:
                self.state = 116
                localctx.glue = self.match(rdsqueryParser.GLUE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GluedSignalPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.glue = None # Token
            self.signal_path = None # SignalPathContext

        def GLUE(self):
            return self.getToken(rdsqueryParser.GLUE, 0)

        def signalPath(self):
            return self.getTypedRuleContext(rdsqueryParser.SignalPathContext,0)


        def getRuleIndex(self):
            return rdsqueryParser.RULE_gluedSignalPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGluedSignalPath" ):
                listener.enterGluedSignalPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGluedSignalPath" ):
                listener.exitGluedSignalPath(self)




    def gluedSignalPath(self):

        localctx = rdsqueryParser.GluedSignalPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_gluedSignalPath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            localctx.glue = self.match(rdsqueryParser.GLUE)
            self.state = 120
            localctx.signal_path = self.signalPath()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GluedSignalExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.glue = None # Token
            self.signal_expr = None # SignalExprContext

        def GLUE(self):
            return self.getToken(rdsqueryParser.GLUE, 0)

        def signalExpr(self):
            return self.getTypedRuleContext(rdsqueryParser.SignalExprContext,0)


        def getRuleIndex(self):
            return rdsqueryParser.RULE_gluedSignalExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGluedSignalExpr" ):
                listener.enterGluedSignalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGluedSignalExpr" ):
                listener.exitGluedSignalExpr(self)




    def gluedSignalExpr(self):

        localctx = rdsqueryParser.GluedSignalExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_gluedSignalExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            localctx.glue = self.match(rdsqueryParser.GLUE)
            self.state = 123
            localctx.signal_expr = self.signalExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateTimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FULL_DATE(self):
            return self.getToken(rdsqueryParser.FULL_DATE, 0)

        def FULL_TIME(self):
            return self.getToken(rdsqueryParser.FULL_TIME, 0)

        def getRuleIndex(self):
            return rdsqueryParser.RULE_dateTime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateTime" ):
                listener.enterDateTime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateTime" ):
                listener.exitDateTime(self)




    def dateTime(self):

        localctx = rdsqueryParser.DateTimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dateTime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(rdsqueryParser.FULL_DATE)
            self.state = 126
            self.match(rdsqueryParser.T__8)
            self.state = 127
            self.match(rdsqueryParser.FULL_TIME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





